--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               </a>
             </li>
           </ul>
+          <p class="contact-note"><span class="material-icons">touch_app</span>Click on contact, please.</p>
         </section>
         <section>
           <div class="info-title-left" id="languages">
@@ -198,6 +199,7 @@
                   </a>
                 </li>
               </ul>
+              <p class="contact-note"><span class="material-icons">touch_app</span>Click on contact, please.</p>
             </section>
           </div>
           <section>
