--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@
                 </a>
                 <br>
               </h6>
+              <hr>
+              <h6>
+                ...and others
+              </h6>
             </article>
           </section>
           <section>
@@ -356,6 +360,30 @@ function squares(x, n) {
                   <img class="instruments-item" src="./assets/svg/css3.svg" alt="CSS3 logo">
                   <img class="instruments-item" src="./assets/svg/sass.svg" alt="SASS logo">
                   <img class="instruments-item" src="./assets/svg/java-script.svg" alt="JS logo">
+                  <img class="instruments-item" src="./assets/svg/git.svg" alt="Git logo">
+                </div>
+              </li>
+              <li class="projects-item">
+                <h4>Shelter</h4>
+                <a href="https://rolling-scopes-school.github.io/2248lm-JSFE2022Q1/shelter/pages/main/" target="_blank">
+                  <img class="projects-img" src="./assets/img/shelter.jpg" alt="Shelter">
+                </a>
+                <div class="instruments-list">
+                  <img class="instruments-item" src="./assets/svg/html5.svg" alt="HTML5 logo">
+                  <img class="instruments-item" src="./assets/svg/css3.svg" alt="CSS3 logo">
+                  <img class="instruments-item" src="./assets/svg/sass.svg" alt="SASS logo">
+                  <img class="instruments-item" src="./assets/svg/java-script.svg" alt="JS logo">
+                  <img class="instruments-item" src="./assets/svg/git.svg" alt="Git logo">
+                </div>
+              </li>
+              <li class="projects-item">
+                <h4>css Mem Slider</h4>
+                <a href="https://2248lm.github.io/cssMemSlider/cssMemSlider/index.html" target="_blank">
+                  <img class="projects-img" src="./assets/img/css-mem-slider.jpg" alt="css Mem Slider">
+                </a>
+                <div class="instruments-list">
+                  <img class="instruments-item" src="./assets/svg/html5.svg" alt="HTML5 logo">
+                  <img class="instruments-item" src="./assets/svg/css3.svg" alt="CSS3 logo">
                   <img class="instruments-item" src="./assets/svg/git.svg" alt="Git logo">
                 </div>
               </li>
