feat: add new info

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="./assets/icons/job.ico">
 </head>
+
 <body>
   <div class="wrapper">
     <nav class="nav">
@@ -208,6 +210,12 @@
             </div>
             <article class="cv-info">
               <h6>
+                <b>2022-2024</b><br>
+                Satbayev University (Almaty)<br>
+                <b>Computer Science</b>
+              </h6>
+              <br>
+              <h6>
                 <b>2001-2006</b><br>
                 Satbayev University (Almaty)<br>
                 Institute of Oil and Gas<br>
@@ -241,8 +249,9 @@
                 <br>
               </h6>
               <hr>
-              <h6>
-                ...and others
+              <h6><b>
+                  <a style="color: blue;" href="https://www.linkedin.com/in/lazzat-mukhametalinova-245302247/">My
+                    LinkedIn</a></b>
               </h6>
             </article>
           </section>
@@ -406,4 +415,5 @@ function squares(x, n) {
   </div>
   <script src="./script.js"></script>
 </body>
+
 </html>
