fix: fix mobile cv content

--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
           <li>
             <a class="nav-item" href="#work-experience">Work experience</a>
           </li>
-          <li>
-            <a class="nav-item" href="#code-example">Code example</a>
-          </li>
           <li class="nav-tablet">
             <a href="#languages">Languages</a>
           </li>
@@ -215,10 +212,10 @@
                   <li class="contacts-item">
                     <a
                       class="contact"
-                      href="https://discordapp.com/users/770363218496454666/"
+                      href="https://www.linkedin.com/in/2248lm/"
                       target="_blank"
                     >
-                      Lazzat#1328
+                      @2248lm
                     </a>
                   </li>
                   <li class="contacts-item">
@@ -237,6 +234,15 @@
                       target="_blank"
                     >
                       @2248lm
+                    </a>
+                  </li>
+                  <li class="contacts-item">
+                    <a
+                      class="contact"
+                      href="https://discordapp.com/users/770363218496454666/"
+                      target="_blank"
+                    >
+                      Lazzat#1328
                     </a>
                   </li>
                   <li class="contacts-item">
@@ -398,7 +404,10 @@
                   <li class="skills-item">CSS3</li>
                   <li class="skills-item">SASS / SCSS</li>
                   <li class="skills-item">JavaScript</li>
+                  <li class="skills-item">TypeScript</li>
                   <li class="skills-item">Git</li>
+                  <li class="skills-item">ESLint</li>
+                  <li class="skills-item">Webpack</li>
                 </ul>
               </section>
               <section>
