fix: fix path to some projects

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 <li class="projects-item">
                   <h4>Shelter</h4>
                   <a
-                    href="https://rolling-scopes-school.github.io/2248lm-JSFE2022Q1/shelter/pages/main/"
+                    href="https://2248lm.github.io/rss-projects/shelter/pages/main/"
                     target="_blank"
                   >
                     <img
@@ -512,7 +512,7 @@
                 <li class="projects-item">
                   <h4>Audio Player</h4>
                   <a
-                    href="https://2248lm.github.io/audio-player/"
+                    href="https://2248lm.github.io/rss-projects/audio-player/"
                     target="_blank"
                   >
                     <img
@@ -552,7 +552,7 @@
                 <li class="projects-item">
                   <h4>Virtual Piano</h4>
                   <a
-                    href="https://2248lm.github.io/virtual-piano/"
+                    href="https://2248lm.github.io/rss-projects/virtual-piano/"
                     target="_blank"
                   >
                     <img
